--- a/about.html
+++ b/about.html
@@ -96,8 +96,9 @@
                         慧子 Keiko　福岡在住のイラストレーター<br>
                         書籍の装画、広告イラスト、動画用イラスト、キャラクターデザイン、CDジャケット等描いています。
                         その他の幅広いジャンルにも挑戦したいので、お気軽にお問い合わせください。
-                        （現在年齢制限のあるお仕事はお断りさせていただいております。）
-                        お問い合わせの際、予算・納期・HPのURLやSNSのIDを明記していただきますようよろしくお願い致します。
+                        お問い合わせの際、予算・納期・HPのURLやSNSのIDを明記していただきますようよろしくお願い致します。<br>
+                        ・現在年齢制限のあるお仕事はお断りさせていただいております。<br>
+                        ・現在個人的なご依頼（アイコン、ヘッダー、リクエスト等）は受付停止中です。誠に申し訳ございませんが、ご連絡いただいてもご返信できない場合がございます。
                     </p>
                 </div>
                 
